@@ -8,8 +8,9 @@ Unreleased
 Changes
 =======
 
-- Upgraded the CrateDB python driver to 0.26.0 in order to enable TCP keepalive
+- Upgrade the CrateDB python driver to 0.26.0 in order to enable TCP keepalive
   on the socket level.
+- Make ctrl-d only quit program on empty command line, like any other shell
 
 2020/09/21 0.26.0
 =================
